@@ -8,17 +8,19 @@ AUX i2pd.confd 176 SHA256 9021447caafd6193a5a87b12d815facf8608d37e0af3e6ff934975
 AUX i2pd.initd 472 SHA256 94bfa1638141b8d5595e814cedb3ed828aade088f9c6f8fb7e703a1af37df88a SHA512 4cd191d0256cb8ee325c18e62c7cfad3a1117cee96ff83bf8987e5efb8574742993410a4f96083969860a88f6575ca3489ae6cba4035dcc3d7787b8c246b274c WHIRLPOOL 8b5b872fc17966c0cc5fe5ee0bd38bf29f4c6a54e22d0ea9a44036043248d04f01f87c3668e778e6fe812f1b3c4f499c1b124c54fb288941a0d7e898cb0a1c10
 AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb833f700e98b691 SHA512 08a944576f3f103ef7206e5e09ad7256f79254097d389b955271db9a8e3781332d9ac564cef06a7bb6c3837324abee3035cb18588470f43861310e886c4f7075 WHIRLPOOL 79096ea93a446240d84bc65930e0746f8fae203303d9309a1a345a1818c11525d782f51dd7200f55d5f1c79b79a7d43c9d1a510225aa5bdf522baf4884a45700
 AUX i2pd.service 399 SHA256 6fa9a8a00e9831c824cf049ebc245ec65510d19fa65e7f8a352f88b0433115d4 SHA512 353e33254ba2d7bc8b6ebc5551ee1bb81ccbce97667018c5b6341df154d1d734cad09a2a1e0bc8b05132020aca92e98783e6719176d1306e1984bd86a4d45f65 WHIRLPOOL fd0bb4b15449d1a892c62a4aa1015cec4ee8c8af38e2b263e654200938af15128b444ee2a79ff2fc6ba83801d21385a09b779dc45d53e9060f4aff250f6e760a
+DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
+EBUILD i2pd-0.5.0.ebuild 1875 SHA256 225a8bd32500a869158a9ea24fb69a481ff32cb0c8e580a706b3be726c144c6f SHA512 66706b064ab060fad92c0767a1afaaa48859ce3a06d30737a7235c6632adffdd8243f9220799749ebbbb217f59514011d0068fa1eaaa11024b7d5597018a5c31 WHIRLPOOL 41979e1f7c7405c9154257cda8d964987f8e4303cc5c9563ac8cb4492996c33fa928cf9fff37b048fd6adf80fb7fdea1c0dec1cc0a9edfa19d253d3f732c9448
 EBUILD i2pd-9999.ebuild 1875 SHA256 2e34270722cfb8501c282c89d14987a1857cc6adb70f50c884b988e5cbbe9fd3 SHA512 18877c292889d5d614fdd310a243e0e574fe98f124ac29411a716a634318b2a25770505635444994c6903d1303c1b24625463c860ed4c2afaf3cf085b25f7d38 WHIRLPOOL 283361622bfee68c94b832bae9c43d5e86f146fc6031c9620da6c55ebcc36a789bf0c3329f6cdd69abe418b56259f2f6eccf48dd8f8fb3463020ca71071b9ede
-MISC ChangeLog 298 SHA256 e877c347437e7493355d59e1646421833afe35f509cbae76a34c7a93eb295610 SHA512 1523fd336e1eda84718e3c87b88c89f138a7307f21b550fb7430dd7cb97c1fdac216f254e87ccf61ee480b342aabef44e17854a874c89c881709878dc10f6871 WHIRLPOOL 0d80e964fcad10c9705e13f1f8d57af85d187209140a45a658c9ffb7e37de2c1f385015ba65e4d4820ceb9c59096768ae6c3df526ea1c3526de66949dcad18c1
+MISC ChangeLog 463 SHA256 3a266757bf4078704b72b5d093733a8967b4c9f6a97f800f4b5139d67728ad2d SHA512 b5766af3c13114a1fefe962b4b89b17bc59cafd1558eca91b2d9b46c2de0b61409a93406b1bb702fc2d3966e20228e9083290a6cb24ac5d6b880249fc4aa6ab1 WHIRLPOOL 9db4754be9c40873fa01878e91b7414b56b9be984444ccb70a45b0a3f6b989d0f7ba876aa9b6941cc4de2de0cd6311f0ea12630aa47ce4c9ff24853d695eeea8
 MISC metadata.xml 505 SHA256 94805fb4a94ff250fb81c585d9088f9575b6cef36b717bee72a566fe7a9d13aa SHA512 c4ff8b6c0535316934c77fd3c5249481a4c2a619a4f743b7f7784ff25e1b2839690239581c1d92b4176d4369c4f6a5a488f206c3ed6cc0433843e08b1f2c20f5 WHIRLPOOL 8231dfd31bdbc80c375f3efc8f190c10bd208c553e070ae3181bcf3d7e0760b540877a90f347080c43984c6a6a3815e91f5e211972058b444869b43b82c7e710
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUodNiAAoJEKXBodJLEo5SMjAIAKGr5VQXQaQvCtXvHp9ZRuY3
-CwjCxRNgaMosyGL3DtZw6Yy3E6HHJ3VIEWjkJpgEVymL30U5CB4ZLwnAaAMT7WO8
-QwygEQ9nP57RfeVAde75qavMmz0ve7pg2Q+r+B4qujwJeI14z/kghVEv4jiRiw8x
-0gHv0HbXQlBMaY6Ztv2vsf6wBxrhST9n5xhfZkhqTfFJ0EMi6KEGbMRjJrl8W6q/
-RDo3PJmidUmiPmBrasK0Tjic3qZMBuT7FX2RnRrJK9xjCJ9WDIuDxxc6098ji3aq
-ohXYXnadLST9yGkd/ShNxmd+lZc/pno06LT+juaV/DEK70VhLSYBzPLd1DVsRYw=
-=czJ9
+iQEcBAEBCAAGBQJUoeOaAAoJEKXBodJLEo5Sb6UH/2gjNZ5e2rH9wCondTadCGEM
+E4OLPH1irN4mspH0V0WVVp2ohMHN2KVhAlrCY63HYo3CZU83sGXYmqkl2NuiW1ed
+LmNJnFp0Ujp/Khwtcdz7x2HhV8ii4JguGWPDS1Z0cukKgiclYAswY6f/lgLulPRC
+C6BobFYo1kwGtrkqZosOl5qKZEJIcPl6DW2LI45UjbujzKyHh8e6w6KZe5bejeZa
+ZWIilWzwNPPN3UcZVFpheuRgaGfWKhx3JnYoVik5AInlyJH3Sx4RMxJsYOElXRlw
+5KlQEebEHozLAZ4AH2TlRU9h3oj0N3uzXSV3vkP5DZ9KhCZv0doHfLu9jPNHE0M=
+=mNMU
 -----END PGP SIGNATURE-----
