@@ -1,5 +1,11 @@
 *i2pd-9999 (29 Dec 2014)
 
+*i2pd-0.5.0 (29 Dec 2014)
+
+  29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) +i2pd-0.5.0.ebuild,
+  i2pd-9999.ebuild:
+  Add support for the stable i2pd-0.5.0
+
   29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) +i2pd-9999.ebuild,
   +files/99i2pd, +files/i2pd.1, +files/i2pd.conf, +files/i2pd.confd,
   +files/i2pd.initd, +files/i2pd.logrotate, +files/i2pd.service, +metadata.xml:
